2002-09-00  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
	* \sdcc\as\mcs51\lklist.c: Fixed incorrect number of parameters to
	sprintf() in line 1267.

2002-09-08  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
	* \sdcc\src\SDCCglue.c: Generate areas REG_BANK_[0-3] only for 8051
	like ports.

2002-09-04  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
	Changes to aslink (All the changes are marked with 'JCF'):

	* \sdcc\as\mcs51\aslink.h: External definition of sflag and
	summary().

	* \sdcc\as\mcs51\lkarea.c: Computes the size of area BSEG_BYTES from
	area BSEG.  Also moves, if possible, the DATA area down into the internal
	ram so more space is available.

	* \sdcc\as\mcs51\lkdata.c: Definition of memory summary output flag
	sflag.

	* \sdcc\as\mcs51\lklist.c: For the BSEG area report the size in bits,
	not bytes.  Function summary() which creates a memory usage summary
	file with extension .mem.  Reports of overlaping stack and small stack
	size.  If the space for the stack is less than 16 bytes aslink trows a
	warning.
	
	* \sdcc\as\mcs51\lkmain.c: Creation of some of the default areas for
	the 8051.  Option 'y' for memory summary output file.

	Changes to sdcc (All the changes are marked with 'JCF'):

	* \sdcc\src\SDCCglobl.h: External definition of RegBankUsed[4].

	* \sdcc\src\SDCCglue.c:  If a register bank is used, creates an
	overlaying area	for it (uses RegBankUsed[4]).

	* \sdcc\src\SDCCmain.c: Definition RegBankUsed[4]; marks register
	bank zero as used by default.  By default aslink locates the stack
	(equivalent to --stack-after-data).  Pass option 'y' to aslink for
	the creation of the .mem file.  Delegates the allocation of data area
	to aslink (it is not longer 0x30 by default).  If --stack-loc passes
	the begining of the stack area to aslink.

	* \sdcc\src\SDCCmem.c:  If a register bank is used, marks it so
	glue() in SDCCglue.c creates an area for it.
	
2002-09-03  Borut Razem <borut.razem@siol.net>
	* sdcc/src/SDCCglue.c, sdcc/src/SDCCglue.h, sdcc/src/SDCCmain.c,