@@ -33,4 +33,8 @@ extern hTab *iCodeSeqhTab;
 int  notUsedInBlock (symbol *, eBBlock *, iCode *);
 bool allDefsOutOfRange (bitVect *, int, int);
 void computeLiveRanges (eBBlock **, int);
+
+void setFromRange (operand *, int);
+void setToRange (operand *, int, bool);
+
 #endif
